--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "react-use": "^17.6.0",
+    "recharts": "^2.15.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.18",
     "web-vitals": "^2.1.4"
